<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hal_lifecycle_manager</name>
  <version>0.0.1</version>
  <description>HAL lifecycle manager package for Alfred</description>

  <!-- Maintainer and license information -->
  <maintainer email="arnaud.hote@gmail.com">Arnix</maintainer>
  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hal_camera</exec_depend>
  <exec_depend>hal_imu</exec_depend>
  <exec_depend>hal_motor_control</exec_depend>
  <exec_depend>hal_pigpio</exec_depend>
  <exec_depend>hal_proxsens</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
